RESOLVED FIXED270214
Silence warning about missing runningboard entitlement for the UIProcess
https://bugs.webkit.org/show_bug.cgi?id=270214
Summary Silence warning about missing runningboard entitlement for the UIProcess
Chris Dumez
Reported 2024-02-27 21:51:43 PST
Silence warning about missing runningboard entitlement for the UIProcess. Only try and take the MediaPlayback process assertion on the UIProcess if it has the proper entitlement.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-27 21:51:59 PST
Chris Dumez
Comment 2 2024-02-27 22:05:17 PST
EWS
Comment 3 2024-02-28 09:27:34 PST
Committed 275451@main (956d3e42ecc8): <https://commits.webkit.org/275451@main> Reviewed commits have been landed. Closing PR #25214 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.