Silence warning about missing runningboard entitlement for the UIProcess https://bugs.webkit.org/show_bug.cgi?id=270214 rdar://123740093

Reviewed by Andy Estes.

Silence warning about missing runningboard entitlement for the UIProcess. Only
try and take the MediaPlayback process assertion on the UIProcess if it has the
proper entitlement.

* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::updateAudibleMediaAssertions):
* Source/WebKit/UIProcess/WebProcessPool.h:

Canonical link: https://commits.webkit.org/275451@main